...
    Error,
}

enum class RelayDestination {
    Local,
    PrivateNetwork,
    Public,
}

data class RelayEndpoint(
    val url: String,
    val destination: RelayDestination,
    val read: Boolean,
...
